@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 1.5-2
-Date: 2022-09-15
+Date: 2022-09-19
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Contact: Matrix-authors@R-project.org
